--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -34,12 +34,12 @@
             var groupMontlyData = google.visualization.arrayToDataTable([
                     ["Grupp", "Periodiska kostnader","Engångskostnader","Samtalskostnader","Krediteringar","Total kostnad"],
                     ["Övriga", 23469.39, 1301.00, 521.58, -337.14, 24954.83],
-                    ["Testgrupp 2", 0.00, 0.00, 0.00, 0.00, 0.00],
-                    ["testremove", 0.00, 0.00, 0.00, 0.00, 0.00],
-                    ["Test", 0.00, 0.00, 0.00, 0.00, 0.00],
+                    ["Testgrupp 2", 3469.39, 1230.00, 0.00, 0.00, 3569.40],
+                    ["testremove", 1469.39, 3350.00, 0.00, 0.00, 12575.40],
+                    ["Test", 469.39, 124.00, 0.00, 0.00, 469.40],
                     ["vintergrupp", 0.00, 0.00, 0.00, 4.00, 0.00],
-                    ["NaraGroup", 0.00, 0.00, 0.00, 0.00, 0.00],
-                    ["a", 0.00, 0.00, 0.00, 0.00, 0.00]
+                    ["NaraGroup", 2379.39, 556.00, 0.00, 0.00, 2956.00],
+                    ["a", 0.00, 0.00, 0.00, 0.00, 1605.00]
                 ]);
             
             drawGroupData(groupMontlyData);
@@ -493,7 +493,7 @@
 
                                     <div class="row">
                                          <div class="col-xs-12">
-                                            <h1>Mobyl analysis</h1>
+                                            <h1>Mobil analysis</h1>
                                             <div id="startpageInfo">
 
                                                 <p>
@@ -579,7 +579,7 @@
                                                                <div class="sidebar-header"><span>Nivå (Vinternatt AB)</span></div>
                                                         </div>
                                                          <div class="col-xs-12" id="trend_month_analysis"> 
-                                                               <div id="overview_col_chart" style="min-height: 300px; border: 1px dashed #dee0de; border-radius: 5px;margin: 1px; margin-bottom: 5px;"></div>
+                                                               <div id="overview_col_chart" style="min-height: 300px; border: 1px dashed #dee0de; border-radius: 5px;margin: 1px; margin-bottom: 5px; padding-bottom: 10px;"></div>
                                                          </div>
 														 <div class="row">
 															<div class="col-xs-6" id="user_activity_per_month"> 
